--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -12,7 +12,15 @@
       <time datetime="" title="{{ article.date.isoformat() }}" pubdate>{{ article.locale_date }}</time>
     </header>
 
+    <div class="article_content">
+      {{ article.summary }}
+    </div>
+
     <div class="meta">
+      <div>
+        <a href="{{ SITEURL }}/{{ article.url }}" class="read_more">Read more &#8594;</a>
+      </div>
+      
       <div>
           {% for tag in article.tags %}
             <a href="{{ SITEURL }}/{{ tag.url }}" class="tag">{{ tag }}</a>
