--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -8,7 +8,7 @@
   {% for article in articles_page.object_list %}
   <article>
     <header>
-      <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
+      <h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
       <time datetime="" title="{{ article.date.isoformat() }}" pubdate>{{ article.locale_date }}</time>
     </header>
 
@@ -16,17 +16,17 @@
       {{ article.summary }}
     </div>
 
-    <div class="meta">
-      <div>
-        <a href="{{ SITEURL }}/{{ article.url }}" class="read_more">Read more &#8594;</a>
+    <div class="meta" align="center">
+<!---      <div>
+        <a href="{{ SITEURL }}/{{ article.url }}" class="read_more">Read more</a>
       </div>
       
-      <div>
+      <div align="right">
           {% for tag in article.tags %}
             <a href="{{ SITEURL }}/{{ tag.url }}" class="tag">{{ tag }}</a>
           {% endfor %}
       </div>
-
+--->
     </div>
 
   </article>
